<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="question_singer">Siapa nama penyanyi terfavorit?</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="katy_perry">Katy Perry</string>
    <string name="whitney_houston">Whitney Houston</string>
    <string name="adele">Adele</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>